--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1>Perfil #catsoninstagram</h1>
 
-<img src=“imagens/cao-feliz-sorridente.jpg” />
+<img src="imagens/cao-feliz-sorridente.jpg" />
 
 </body>
 
